arm: overlays: adis16475: add compatible parameter
Make the compatible property as __mandatory__ overlay property. So that,
user's should be able to use the same overlay (without recompiling) for
all the devices supported by the adis16475 driver.

Signed-off-by: Nuno Sá <nuno.sa@analog.com>

--- a/arch/arm/boot/dts/overlays/adis16475-overlay.dts
+++ b/arch/arm/boot/dts/overlays/adis16475-overlay.dts
@@ -45,7 +45,6 @@
 			#size-cells = <0>;
 
 			adis16475: adis16475@0 {
-				compatible = "adi,adis16477-1";
 				reg = <0>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&adis16475_pins>;
@@ -62,5 +61,6 @@
 	__overrides__ {
 		interrupt = <&adis16475_pins>,"brcm,pins:0",
 				<&adis16475>,"interrupts:0";
+		device = <&adis16475>,"compatible";
 	};
 };
