arm: overlays: adis16480: add compatible parameter
Make the compatible property as __mandatory__ overlay property. So that,
user's should be able to use the same overlay (without recompiling) for
all the devices supported by the adis16480 driver.

Signed-off-by: Nuno Sá <nuno.sa@analog.com>

--- a/arch/arm/boot/dts/overlays/adis16480-overlay.dts
+++ b/arch/arm/boot/dts/overlays/adis16480-overlay.dts
@@ -45,7 +45,6 @@
 			#size-cells = <0>;
 
 			adis16480: adis16480@0 {
-				compatible = "adi,adis16495-3";
 				reg = <0>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&adis16480_pins>;
@@ -58,5 +57,9 @@
 				interrupt-parent = <&gpio>;
 			};
 		};
+	};
+
+	__overrides__ {
+		device = <&adis16480>,"compatible";
 	};
 };
