--- a/arch/arm/boot/dts/overlays/adis16480-overlay.dts
+++ b/arch/arm/boot/dts/overlays/adis16480-overlay.dts
@@ -61,5 +61,14 @@
 
 	__overrides__ {
 		device = <&adis16480>,"compatible";
+		drdy_dio2 = <&adis16480_pins>,"brcm,pins:0=25",
+				<&adis16480>,"interrupts:0=25",
+				<&adis16480>,"interrupt-names=DIO2";
+		drdy_dio3 = <&adis16480_pins>,"brcm,pins:0=4",
+				<&adis16480>,"interrupts:0=4",
+				<&adis16480>,"interrupt-names=DIO3";
+		drdy_dio4 = <&adis16480_pins>,"brcm,pins:0=5",
+				<&adis16480>,"interrupts:0=5",
+				<&adis16480>,"interrupt-names=DIO4";
 	};
 };
