Added suport for 18 bits ad7606
Test

Signed-off-by: Liviu Adace <liviu.adace@analog.com>

--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -158,6 +158,7 @@ dtbo-$(CONFIG_ARCH_BCM2835) += \
 	rpi-ad7173.dtbo \
 	rpi-ad7190.dtbo \
 	rpi-ad738x.dtbo \
+	rpi-ad7606.dtbo \
 	rpi-ad7768-1.dtbo \
 	rpi-ad9834.dtbo \
 	rpi-adar1000.dtbo \
