--- a/arch/arm64/configs/adi_gmsl_defconfig
+++ b/arch/arm64/configs/adi_gmsl_defconfig
@@ -241,13 +241,15 @@ CONFIG_VIDEO_XILINX_AXI4S_SWITCH=y
 CONFIG_VIDEO_XILINX_SWITCH=y
 CONFIG_VIDEO_IMX219=y
 CONFIG_VIDEO_IMX274=y
-CONFIG_VIDEO_ISX021=m
-CONFIG_VIDEO_OV5640=m
-CONFIG_VIDEO_OVX03A=m
-CONFIG_VIDEO_MAXIM_AGGREGATOR=m
-CONFIG_VIDEO_MAX96717=m
-CONFIG_VIDEO_MAX96724=m
-CONFIG_VIDEO_MAX9296A=m
+CONFIG_VIDEO_ISX021=y
+CONFIG_VIDEO_OV5640=y
+CONFIG_VIDEO_OVX03A=y
+CONFIG_VIDEO_MAXIM_AGGREGATOR=y
+CONFIG_VIDEO_MAX96717=y
+CONFIG_VIDEO_MAX96724=y
+CONFIG_VIDEO_MAX9296A=y
+CONFIG_MQNIC=y
+CONFIG_COMMON_CLK_ADI=y
 # CONFIG_MEDIA_TUNER_E4000 is not set
 # CONFIG_MEDIA_TUNER_FC0011 is not set
 # CONFIG_MEDIA_TUNER_FC0012 is not set
