arch: arm: dts: overlays: ad7091r8: Fix interrupt pin setup
Set interrupt type to falling edge since by default alert signal is
active low when enabled.
Add properties for pinctrl.
In my tests the device worked properly without the pinctrl properties so
they should not be required. Anyway, it makes sense to add information
about pin function so I kept them.

Signed-off-by: Marcelo Schmitt <marcelo.schmitt@analog.com>

--- a/arch/arm/boot/dts/overlays/rpi-ad7091r8-overlay.dts
+++ b/arch/arm/boot/dts/overlays/rpi-ad7091r8-overlay.dts
@@ -10,6 +10,13 @@
 	compatible = "brcm,bcm2835", "brcm,bcm2711";
 };
 
+&gpio {
+	ad7091r8_pins: ad7091r8_pins {
+		brcm,pins = <22>; // interrupt
+		brcm,function = <0>; // in
+	};
+};
+
 &spi0 {
 	status = "okay";
 
@@ -21,8 +28,10 @@
 		spi-max-frequency = <1000000>;
 		adi,conversion-start-gpios = <&gpio 25 GPIO_ACTIVE_LOW>;
 		reset-gpios = <&gpio 27 GPIO_ACTIVE_LOW>;
-		interrupts = <22 IRQ_TYPE_EDGE_RISING>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&ad7091r8_pins>;
 		interrupt-parent = <&gpio>;
+		interrupts = <22 IRQ_TYPE_EDGE_FALLING>;
 	};
 };
 
