arm64: dts: xilinx: Add pwm_gen-based dts
Add corresponding overlay and Makefile-based target for the pwm_gen-based dts

Signed-off-by: Alin-Tudor Sferle <Alin-Tudor.Sferle@analog.com>

--- a/arch/arm64/boot/dts/xilinx/Makefile
+++ b/arch/arm64/boot/dts/xilinx/Makefile
@@ -71,6 +71,7 @@ zynqmp-smk-k26-revA-sck-kv-g-revA-dtbs := zynqmp-smk-k26-revA.dtb zynqmp-sck-kv-
 zynqmp-smk-k26-revA-sck-kv-g-revB-dtbs := zynqmp-smk-k26-revA.dtb zynqmp-sck-kv-g-revB.dtbo
 zynqmp-sm-k26-revA-sck-kv-g-revB-gmsl-dtbs := zynqmp-sm-k26-revA-sck-kv-g-revB.dtb gmsl.dtbo
 zynqmp-sm-k26-revA-gmsl-mqnic-dtbs := zynqmp-sm-k26-revA.dtb gmsl-k26.dtbo mqnic-k26.dtbo
+zynqmp-sm-k26-revA-gmsl-mqnic-pwm-dtbs := zynqmp-sm-k26-revA.dtb gmsl-k26-pwm.dtbo mqnic-k26.dtbo
 
 zynqmp-sm-k26-revA-sck-kr-g-revA-dtbs := zynqmp-sm-k26-revA.dtb zynqmp-sck-kr-g-revA.dtbo
 zynqmp-sm-k26-revA-sck-kr-g-revB-dtbs := zynqmp-sm-k26-revA.dtb zynqmp-sck-kr-g-revB.dtbo
@@ -84,6 +85,7 @@ zynqmp-smk-k24-revA-sck-kv-g-revB-dtbs := zynqmp-smk-k24-revA.dtb zynqmp-sck-kv-
 
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sm-k26-revA-sck-kv-g-revA.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sm-k26-revA-gmsl-mqnic.dtb
+dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sm-k26-revA-gmsl-mqnic-pwm.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sm-k26-revA-sck-kv-g-revB.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-smk-k26-revA-sck-kv-g-revA.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-smk-k26-revA-sck-kv-g-revB.dtb
