--- a/drivers/iio/dac/Kconfig
+++ b/drivers/iio/dac/Kconfig
@@ -96,6 +96,16 @@ config AD5380
 	  To compile this driver as module choose M here: the module will be called
 	  ad5380.
 
+config AD5413
+	tristate "Analog Devices AD5413 DAC driver"
+	depends on SPI_MASTER
+	help
+	  Say yes here to build support for Analog Devices AD5413 single channel
+	  Digital to Analog Converter.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called ad5413.
+
 config AD5421
 	tristate "Analog Devices AD5421 DAC driver"
 	depends on SPI
@@ -597,5 +607,4 @@ config VF610_DAC
 
 	  This driver can also be built as a module. If so, the module will
 	  be called vf610_dac.
-
 endmenu
