--- a/Documentation/devicetree/bindings/iio/dac/adi,ad5413.yaml
+++ b/Documentation/devicetree/bindings/iio/dac/adi,ad5413.yaml
@@ -6,20 +6,26 @@ $schema: http://devicetree.org/meta-schemas/core.yaml#
 
 title: Analog Devices AD5413 DAC
 
+description: |
+  Analog Devices AD5413 is a single-channel precision DAC supporting voltage
+  or current output modes with programmable slew-rate control.
+  The output mode is selected via the adi,chan-current-mode property.
+  Optional reset GPIO may be provided.
+
 maintainers:
-  - Bruce Tsao <bruce.tsao@analog.com>
+  - name: Bruce Tsao
+    email: bruce.tsao@analog.com
 
 properties:
   compatible:
     const: adi,ad5413
 
-  reg:
-    maxItems: 1
-
   spi-max-frequency:
     maximum: 50000000
 
-  reset-gpios: true
+  reset-gpios:
+    maxItems: 1
+    description: Optional reset GPIO (active low).
 
   avdd-supply:
     description: Analog positive supply (AVDD)
@@ -30,21 +36,9 @@ properties:
   avss-supply:
     description: Analog negative supply (AVSS)
 
-  adi,range-microvolt:
-    description: Voltage output range <min, max> in microvolts
-    oneOf:
-      - items:
-          - const: -10500000
-          - const: 10500000
-      - items:
-          - const: -12600000
-          - const: 12600000
-
-  adi,range-microamp:
-    description: Current output range <min, max> in microamps
-    items:
-      - const: 0
-      - const: 24000
+  adi,chan-current-mode:
+    type: boolean
+    description: Select current output mode. If absent, voltage mode is used.
 
   adi,slew-time-us:
     description: Output digital slew control time in microseconds
@@ -54,21 +48,35 @@ properties:
 
 required:
   - compatible
-  - reg
-  - spi-max-frequency
   - avdd-supply
   - dvdd-supply
   - avss-supply
 
 allOf:
   - $ref: /schemas/spi/spi-peripheral-props.yaml#
-  - oneOf:
-      - required: ['adi,range-microamp']
-      - required: ['adi,range-microvolt']
 
 unevaluatedProperties: false
 
 examples:
+  - |
+    #include <dt-bindings/gpio/gpio.h>
+
+    spi {
+        #address-cells = <1>;
+        #size-cells = <0>;
+
+        dac@0 {
+            compatible = "adi,ad5413";
+            reg = <0>;
+            spi-max-frequency = <1000000>;
+            reset-gpios = <&gpio 0 GPIO_ACTIVE_LOW>;
+            avdd-supply = <&avdd>;
+            dvdd-supply = <&dvdd>;
+            avss-supply = <&avss>;
+            adi,slew-time-us = <125>;
+        };
+    };
+
   - |
     spi {
         #address-cells = <1>;
@@ -78,11 +86,10 @@ examples:
             compatible = "adi,ad5413";
             reg = <0>;
             spi-max-frequency = <1000000>;
-            reset-gpios = <&gpio 0 1>; /* 1 = active low */
             avdd-supply = <&avdd>;
             dvdd-supply = <&dvdd>;
             avss-supply = <&avss>;
-            adi,range-microamp = <0 24000>;
-            adi,slew-time-us = <125>;
+
+            adi,chan-current-mode;
         };
     };
