--- a/drivers/iio/frequency/Kconfig
+++ b/drivers/iio/frequency/Kconfig
@@ -104,6 +104,38 @@ endmenu
 
 menu "Direct Digital Synthesis"
 
+config AD9910
+	tristate "Analog Devices AD9910 Direct Digital Synthesizer"
+	depends on SPI
+	depends on GPIOLIB
+	select IIO_BACKEND
+	help
+	  Say yes here to build support for Analog Devices AD9910
+	  1 GSPS, 14-Bit DDS with integrated DAC.
+
+	  Supports single tone mode with 8 configurable profiles
+	  and digital ramp generation.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called ad9910.
+
+config AD9910_AXI
+	tristate "Analog Devices AD9910 AXI Backend driver"
+	depends on AD9910 && (MICROBLAZE || NIOS2 || ARCH_ZYNQ ||\
+		   ARCH_ZYNQMP || ARCH_INTEL_SOCFPGA || COMPILE_TEST)
+	depends on RESET_CONTROLLER
+	select IIO_BUFFER
+	select IIO_BUFFER_HW_CONSUMER
+	select IIO_BUFFER_DMAENGINE
+	select REGMAP_MMIO
+	help
+	  Say yes here to build support for the AXI Backend Driver for the
+	  Analog Devices AD9910 DDS. The IP core is used to drive control pins
+	  and interface with the parallel data port of the AD9910 device.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called ad9910-axi.
+
 config CF_AXI_DDS
 	tristate "Analog Devices CoreFPGA AXI DDS driver"
 	depends on SPI
