--- a/drivers/iio/frequency/Makefile
+++ b/drivers/iio/frequency/Makefile
@@ -9,6 +9,8 @@ obj-$(CONFIG_AD9517) += ad9517.o
 obj-$(CONFIG_AD9523) += ad9523.o
 obj-$(CONFIG_AD9528) += ad9528.o
 obj-$(CONFIG_AD9548) += ad9548.o
+obj-$(CONFIG_AD9910) += ad9910.o
+obj-$(CONFIG_AD9910_AXI) += ad9910-axi.o
 obj-$(CONFIG_ADF4030) += adf4030.o
 obj-$(CONFIG_ADF41513) += adf41513.o
 obj-$(CONFIG_ADF4159) += adf4159.o
