arch: arm64: boot: dts: xilinx: Update MEZZ GPIOs
Update MEZZ GPIOs in zynqmp-zcu102-rev10-adrv9032-mezz.dts.

Signed-off-by: George Mois <george.mois@analog.com>

--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-adrv9032-mezz.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-adrv9032-mezz.dts
@@ -321,9 +321,9 @@
 };
 
 &trx0_adrv903x {
-	reset-gpios = <&gpio 134 0>; // TBD
+	reset-gpios = <&gpio 141 0>; // 63
 };
 
 &clk0_hmc7044 {
-	reset-gpios = <&gpio 147 0>; // TBD
+	reset-gpios = <&gpio 140 0>; // 62
 };
