iio: axi_fsrc_sequencer: add driver to add holes to a stream
Signed-off-by: Jorge Marques <jorge.marques@analog.com>

--- a/drivers/iio/jesd204/Kconfig
+++ b/drivers/iio/jesd204/Kconfig
@@ -10,6 +10,12 @@ config AXI_ADXCVR
 	depends on COMMON_CLK
 	select XILINX_TRANSCEIVER
 
+config AXI_FSRC_SEQUENCER
+	tristate "Analog Devices AXI FSRC Sequencer Support"
+	help
+	  This driver allows to inject and remove invalid frames
+	  from a stream.
+
 config AXI_JESD204B
 	tristate "Generic AXI JESD204B configuration driver"
 	depends on COMMON_CLK
