--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-adrv9032-mezz.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-adrv9032-mezz.dts
@@ -66,15 +66,16 @@
 
 		hmc7044_c0: channel@0 {
 			reg = <0>;
-			adi,extended-name = "DEV_SYSREF";
+			adi,extended-name = "DEV_CLK";
 			adi,divider = <6>;
 			adi,driver-mode = <HMC7044_DRIVER_MODE_LVDS>;
 		};
 		hmc7044_c1: channel@1 {
 			reg = <1>;
-			adi,extended-name = "DEV_CLK";
+			adi,extended-name = "DEV_SYSREF";
 			adi,divider = <6>;
 			adi,driver-mode = <HMC7044_DRIVER_MODE_LVDS>;
+			adi,jesd204-sysref-chan;
 		};
 		hmc7044_c6: channel@6 {
 			reg = <6>;
